#
# Author: Carlos Duelo Serrano <cduelo@cesvima.upm.es>
# Company: Cesvima, UPM
#
# Notes: Using Builyard https://github.com/Eyescale/Buildyard
#

# Perf fileHandler
#add_executable( perfFileHandler fileHandler.cpp )
#target_link_libraries( perfFileHandler
#                                IVdataHandler
#                                ${Boost_LIBRARIES}
#                                )
